gcc/testsuite/g++.dg/cpp0x/decltype-incomplete1.C
// PR c++/59270
// { dg-do compile { target c++11 } }

struct A
{
  struct B b; // { dg-error "incomplete type" }
};

decltype(A()) a;
